# Woo.py

./: README.md  mypy.ini  oauth.py  pyproject.toml
test/: .env.example  conftest.py  test_customer.py  test_data.py  test_models_parse.py  test_payment_gateway.py  test_product_attribute.py  test_product_category.py  test_product_review.py  test_product_tag.py  test_product_variation.py  test_reports.py  test_settings.py  test_taxclass.py  test_webhook.py
test/sample_data/: _note.txt  coupon.json  order_note.json  order_refund.json  product.json  tax_class.json  webhook.json
woo_py/: api.py  woo.py
woo_py/models/: __init__.py  coupon.py  customer.py  data.py  order.py  order_note.py  order_refund.py  payment_gateway.py  product.py  product_attribute.py  product_category.py  product_review.py  product_tag.py  product_variation.py  report.py  setting.py  tax_class.py  tax_rate.py  webhook.py
