[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "woo_py"
version = "0.0.2"
dependencies = [
    "httpx",
    "pydantic",
    "woocommerce",
    "pydantic-changedetect",
    "loguru",
]
[project-optional-dependencies]
test = [
    "python-dotenv",
    "pytest",
    "requests_mock",
]
dev = [
    "black",
    "mypy",
    "pylint",
]
authors = [
  { name="gronnmann", email="gronnmannthecoder@gmail.com" },
]
description = "A wrapper for the WooCommerce API using pydantic models"
readme = "README.md"
requires-python = ">=3.12"